syntax = "proto3";

package xyz.usbpc.kuroji.eventrouter.api;
import "google/protobuf/any.proto";
import "xyz/usbpc/kuroji/proto/discord/events/Event.proto";


service MessageRouterSubscriber {
    rpc onEvent (Event) returns (SubResponse) {}
}

message Empty {

}

message SubResponse {
}

message Event {
    string trace_id = 1;
    xyz.usbpc.kuroji.proto.discord.events.EventType type = 2;
    uint64 bot_id = 3;
    uint32 shard_id = 4;
    google.protobuf.Any event = 5;
    RoutingInfo routing = 6;
}

message RoutingInfo {
    uint64 id = 1;
}


message SubscriberGroup {
    repeated xyz.usbpc.kuroji.proto.discord.events.EventType topics = 1;
    string name = 2;
}

message Subscriber {
    string hostname = 1;
    uint32 port = 2;
    repeated RoutingInfo claimed = 3;
    enum Status {
        UNKNOWN = 0;
        RUNNING = 1;
        SHUTTING_DOWN = 3;
    }
    Status status = 4;
}